# bandcamp-player-evo

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  setup.py
bandcamp_parser/: albums.json  discover.py  request.py  scrape.js  tag.py  track.py
bandcamp_player/: __init__.py  controls.py  player.py  status.py  terminal.py
tests/: test_controls.py  test_discover.py  test_player.py  test_status.py
